Changing Regarding Clients

--- a/templates/partials/tables.hbs
+++ b/templates/partials/tables.hbs
@@ -36,87 +36,83 @@
                                                             <table class="table table-striped">
                                                                 <tr>
                                                                      <th>Access</th>
-                                                                    <th>View</th>
-                                                                    <th >Update</th>
-                                                                    <th>Delete</th>
+                                                                    <th>Mark</th>
+                                                                   
                                                                 </tr>
                                                                 <tr>
-                                                                    <td>Approvals</td>
+                                                                    <td>Clients</td>
                                                                     <td class="active">
                                                                         <input type="checkbox"
                                                                             class="select-item checkbox"
                                                                             name="select-item" value="1000" />
                                                                     </td>
-                                                                    <td class="active">
-                                                                        <input type="checkbox"
-                                                                            class="select-item checkbox"
-                                                                            name="select-item" value="1000" />
-                                                                    </td>
-                                                                    <td class="active">
-                                                                        <input type="checkbox"
-                                                                            class="select-item checkbox"
-                                                                            name="select-item" value="1000" />
-                                                                    </td>
+                                                                   
                                                                 </tr>
                                                                 
                                                                
                                                                 <tr>
-                                                                    <td>Comments</td>
+                                                                    <td>Stylist</td>
                                                                     <td class="active">
                                                                         <input type="checkbox"
                                                                             class="select-item checkbox"
                                                                             name="select-item" value="1000" />
                                                                     </td>
-                                                                    <td class="active">
-                                                                        <input type="checkbox"
-                                                                            class="select-item checkbox"
-                                                                            name="select-item" value="1000" />
-                                                                    </td>
-                                                                    <td class="active">
-                                                                        <input type="checkbox"
-                                                                            class="select-item checkbox"
-                                                                            name="select-item" value="1000" />
-                                                                    </td>
+                                                                   
                                                                 </tr>
 
 
                                                                   <tr>
-                                                                    <td>Commplain</td>
+                                                                    <td>Pending Accounts</td>
                                                                     <td class="active">
                                                                         <input type="checkbox"
                                                                             class="select-item checkbox"
                                                                             name="select-item" value="1000" />
                                                                     </td>
+                                                                   
+                                                                </tr>
+                                                                  <tr>
+                                                                    <td>Appointments</td>
                                                                     <td class="active">
                                                                         <input type="checkbox"
                                                                             class="select-item checkbox"
                                                                             name="select-item" value="1000" />
                                                                     </td>
+                                                                   
+                                                                </tr>
+                                                              
+                                                                  <tr>
+                                                                    <td>Upcomming Appointments</td>
                                                                     <td class="active">
                                                                         <input type="checkbox"
                                                                             class="select-item checkbox"
                                                                             name="select-item" value="1000" />
                                                                     </td>
+                                                                   
+                                                                </tr>
+
+                                                                       
+                                                                </tr>
+                                                                  <tr>
+                                                                    <td>Past Appointments</td>
+                                                                    <td class="active">
+                                                                        <input type="checkbox"
+                                                                            class="select-item checkbox"
+                                                                            name="select-item" value="1000" />
+                                                                    </td>
+                                                                   
                                                                 </tr>
 
 
+
+
                                                                   <tr>
-                                                                    <td>Notification</td>
+                                                                    <td>Block</td>
                                                                     <td class="active">
                                                                         <input type="checkbox"
                                                                             class="select-item checkbox"
                                                                             name="select-item" value="1000" />
                                                                     </td>
-                                                                    <td class="active">
-                                                                        <input type="checkbox"
-                                                                            class="select-item checkbox"
-                                                                            name="select-item" value="1000" />
-                                                                    </td>
-                                                                    <td class="active">
-                                                                        <input type="checkbox"
-                                                                            class="select-item checkbox"
-                                                                            name="select-item" value="1000" />
-                                                                    </td>
+                                                                   
                                                                 </tr>
 
 
@@ -127,16 +123,7 @@
                                                                             class="select-item checkbox"
                                                                             name="select-item" value="1000" />
                                                                     </td>
-                                                                    <td class="active">
-                                                                        <input type="checkbox"
-                                                                            class="select-item checkbox"
-                                                                            name="select-item" value="1000" />
-                                                                    </td>
-                                                                    <td class="active">
-                                                                        <input type="checkbox"
-                                                                            class="select-item checkbox"
-                                                                            name="select-item" value="1000" />
-                                                                    </td>
+                                                                   
                                                                 </tr>
 
 
@@ -147,75 +134,17 @@
                                                                             class="select-item checkbox"
                                                                             name="select-item" value="1000" />
                                                                     </td>
-                                                                    <td class="active">
-                                                                        <input type="checkbox"
-                                                                            class="select-item checkbox"
-                                                                            name="select-item" value="1000" />
-                                                                    </td>
-                                                                    <td class="active">
-                                                                        <input type="checkbox"
-                                                                            class="select-item checkbox"
-                                                                            name="select-item" value="1000" />
-                                                                    </td>
+                                                                   
                                                                 </tr>
 
                                                                   <tr>
-                                                                    <td>Reviews</td>
+                                                                    <td>Customer Support</td>
                                                                     <td class="active">
                                                                         <input type="checkbox"
                                                                             class="select-item checkbox"
                                                                             name="select-item" value="1000" />
                                                                     </td>
-                                                                    <td class="active">
-                                                                        <input type="checkbox"
-                                                                            class="select-item checkbox"
-                                                                            name="select-item" value="1000" />
-                                                                    </td>
-                                                                    <td class="active">
-                                                                        <input type="checkbox"
-                                                                            class="select-item checkbox"
-                                                                            name="select-item" value="1000" />
-                                                                    </td>
-                                                                </tr>
-
-
-                                                                  <tr>
-                                                                    <td>Stylist</td>
-                                                                    <td class="active">
-                                                                        <input type="checkbox"
-                                                                            class="select-item checkbox"
-                                                                            name="select-item" value="1000" />
-                                                                    </td>
-                                                                    <td class="active">
-                                                                        <input type="checkbox"
-                                                                            class="select-item checkbox"
-                                                                            name="select-item" value="1000" />
-                                                                    </td>
-                                                                    <td class="active">
-                                                                        <input type="checkbox"
-                                                                            class="select-item checkbox"
-                                                                            name="select-item" value="1000" />
-                                                                    </td>
-                                                                </tr>
-
-
-                                                                  <tr>
-                                                                    <td>Services</td>
-                                                                    <td class="active">
-                                                                        <input type="checkbox"
-                                                                            class="select-item checkbox"
-                                                                            name="select-item" value="1000" />
-                                                                    </td>
-                                                                    <td class="active">
-                                                                        <input type="checkbox"
-                                                                            class="select-item checkbox"
-                                                                            name="select-item" value="1000" />
-                                                                    </td>
-                                                                    <td class="active">
-                                                                        <input type="checkbox"
-                                                                            class="select-item checkbox"
-                                                                            name="select-item" value="1000" />
-                                                                    </td>
+                                                                    
                                                                 </tr>
                                                              
                                                             </table>
