--- a/templates/views/appointments.hbs
+++ b/templates/views/appointments.hbs
@@ -10,7 +10,7 @@
 
 <link rel="icon" href="favicon.ico" type="image/x-icon"/>
 
-<title>Clients</title>
+<title>Appointments</title>
 
 <!-- Bootstrap Core and vandor -->
 <link rel="stylesheet" href="plugins/bootstrap/css/bootstrap.min.css" />
