--- a/templates/views/upappointments.hbs
+++ b/templates/views/upappointments.hbs
@@ -10,7 +10,7 @@
 
 <link rel="icon" href="favicon.ico" type="image/x-icon"/>
 
-<title>Past Appointments</title>
+<title>UpComming Appointments</title>
 
 <!-- Bootstrap Core and vandor -->
 <link rel="stylesheet" href="plugins/bootstrap/css/bootstrap.min.css" />
@@ -42,7 +42,7 @@
                             <div class="card-body">
                                 <div class="d-md-flex justify-content-between mb-2">
                                     <ul class="nav nav-tabs b-none">
-                                        <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#list"><i class="fa fa-list-ul"></i>Past Appointments</a></li>                                                                            </ul>
+                                        <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#list"><i class="fa fa-list-ul"></i>UpComming Appointments</a></li>                                                                            </ul>
                                 </div>
                                 <div class="row">
                                     <div class="col-lg-3 col-md-4 col-sm-12">
@@ -70,35 +70,27 @@
                 <div class="tab-content">
                     <div class="tab-pane fade show active" id="list" role="tabpanel">
                         <div class="row clearfix">
-                            <div class="col-xl-4 col-lg-4 col-md-6">
+                            <div class="col-xl-6 col-lg-6 col-md-6">
                                 <div class="card">
                                     <div class="card-body text-center ribbon">
-                                        <div class="ribbon-box green">New</div>
-                                        <img class="rounded-circle img-thumbnail w100" src="images/sm/avatar1.jpg" alt="">
-                                        <p class="mt-3 mb-0">ramzan@gmail.com</p>
-                                        <p class="mt-3 mb-0" >35$</p>
+                                        <p class="mt-3 mb-0">12 Dec 2021</p>
+                                        <p class "mt-3 mb-0">234 Eden Garden New York</p>
                                         <div class="row text-center mt-4">
                                             <div class="col-4 border-right">
                                                 <label class="mb-0">Client Name</label>
-                                                <h4 class="font-18">Mohammad Ramzan</h4>
-                                            </div>
+                                                <h4 class="font-18">Ramzan</h4>
+                        ``                    </div>
                                             <div class="col-4 border-right">
                                                 <label class="mb-0">Stylist Name</label>
                                                 <h4 class="font-18">Ali Abbbas</h4>
                                             </div>
-
-                                            <div class="col-4 border-right">
+                                           <div class="col-4">
                                                 <label class="mb-0">Service Name</label>
-                                                <h4 class="font-18">Hair Cut</h4>
+                                                <h4 class="font-18">Facial</h4>
                                             </div>
+                                           
                                         </div>
 
-                                  <div class="row text-center mt-4">
-                                            <div class="col-12">
-                                                <label class="mb-0">Completed On</label>
-                                                <h4 class="font-18">28 Dec 2021</h4>
-                                            </div>
-                                        </div>
                 
                                     </div>
                                 </div>
