--- a/templates/partials/links.hbs
+++ b/templates/partials/links.hbs
@@ -10,7 +10,8 @@
                 <li><a href="/approvals"><span>Pending Accounts</span></a></li>        
                 <li><a href="/blockcontacts"><span>Block</span></a></li>
                 <li><a href="/adminapproved">Admin Approved</a></li>
-                <li><a href="/appointments"><span>Appointments</span></a></li>
+                <li><a href="/appointments"><span> Appointments</span></a></li>
+                <li><a href="/upappointments"><span> UpComming Appointments</span></a></li>
                 <li><a href="/pastappointments"><span>Past Appointments</span></a></li>
                 <li><a href="/access"><span>Access</span></a></li>
                 <li><a href="/customersupport"><span>Customer Support</span></a></li>
